# cdk-aws-serverless-otlp-kinesis-lambda

./: .projenrc.ts  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.projen/: deps.json
src/: main.ts
src/functions/client-rust/: Cargo.toml
src/functions/otlp-forwarder-cwl/: Cargo.toml
src/functions/otlp-forwarder-kinesis/: Cargo.toml
src/layers/otlp-stdout-kinesis-extension/: Cargo.toml
src/stacks/: my-stack.ts
